modules/mod_emundus_applications/style/mod_emundus_applications.css
/* ... */
@media all and (min-width: 480px) and (max-width: 767px) {

    #applications_list_view div[id*="group_application_tab"] {
        overflow-x: scroll;
    }

    .main-page-file-info a {
        margin-bottom: var(--m-4);
    }

    .view-featured .candidacy-files-list .row {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
}

@media all and (min-width: 768px) and (max-width: 959px) {
    .view-featured .candidacy-files-list .row .main-page-application-title {
        width: 100%;
    }

    .view-featured .candidacy-files-list .row .main-page-file-info {
        width: 100%;
    }
}

@media all and (min-width: 768px) and (max-width: 992px) {
    .view-featured .candidacy-files-list .row {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        align-items: center;
    }
}

@media screen and (max-width: 991px) {
    .main-page-file-info {
        width: auto;
    }

    .main-page-file-progress {
        width: 100%;
        margin-top: var(--m-8);
    }
}

@media screen and (max-width: 958px) {

    .candidacy-files-list .btn-warning {
        z-index: 5;
        position: relative;
    }

    .candidacy-files-list .main-page-file-progress {
        top: 40px;
        padding-bottom: var(--p-40);
    }
}

@media all and (max-width: 959px) {
    .main-page-application-title {
        text-align: center;
    }

    .main-page-file-progress {
        margin-top: 0;
    }

    .main-page-file-info {
        text-align: center;
    }

    .view-featured .candidacy-files-list .row .col-md-4 {
        text-align: center;
    }

    .view-featured .candidacy-files-list .row .col-md-4:nth-child(3) {
        display: inline-flex;
        align-items: center;
    }
}


.mod_emundus_applications___header {
    width: 100%;
}

.mod_emundus_applications___header #add-application {
    width: 40%;
}

.mod_emundus_applications___footer {
    max-width: 720px;
    width: 100%;
}

.mod_emundus_applications___footer a.btn.btn-success:not(.btn-xs) {
    width: auto;
    margin-bottom: var(--m-24);
}

.mod_emundus_applications___header h1 {
    font-family: var(--em-profile-font-title), Inter, sans-serif;
    color: var(--neutral-900);
}

.mod_emundus_applications___header_desc h2 {
    margin-top: var(--m-24);
    font-family: var(--em-profile-font-title), Inter, sans-serif;
    color: var(--em-default-title-color-1);
}

.mod_emundus_applications___header_desc p {
    color: var(--neutral-600);
}

.mod_emundus_applications___header.mod_emundus_applications___tmp_tchooz a#add-application {
    width: 100%;
}

.mod_emundus_applications___content {
    display: grid !important;
    align-items: flex-start;
    padding: 0;
    gap: var(--p-48);
    grid-template-columns: repeat(2, 1fr);
}

.mod_emundus_applications___content_app {
    box-shadow: var(--em-box-shadow-x-1) var(--em-box-shadow-y-1) var(--em-box-shadow-blur-1) var(--em-box-shadow-color-1), var(--em-box-shadow-x-2) var(--em-box-shadow-y-2) var(--em-box-shadow-blur-2) var(--em-box-shadow-color-2), var(--em-box-shadow-x-3) var(--em-box-shadow-y-3) var(--em-box-shadow-blur-3) var(--em-box-shadow-color-3);
    border-radius: var(--em-applicant-br-cards) !important;
    padding: var(--p-32);
    background: var(--neutral-0);
}

.mod_emundus_applications___date {
    display: flex;
    align-items: center;
}

.mod_emundus_applications___informations {
    display: grid;
    align-items: flex-start;
    padding: 0;
    gap: var(--p-16);
    grid-template-columns: repeat(2, 1fr);
}

.mod_emundus_applications___content_app hr {
    margin: var(--m-16) 0;
}

.mod_emundus_applications___content_app span.em-applicant-default-font {
    word-break: break-word;
}

.mod_emundus_applications___circle {
    height: 8px;
    width: 8px;
    border-radius: 50%;
}

.mod_emundus_applications___programme_tag {
    border-radius: var(--em-default-br);
    padding: var(--p-4) var(--p-16);
    width: fit-content;
    font-size: 12px;
    font-weight: 600;
}

.mod_emundus_applications___title {
    color: var(--em-default-title-color-1) !important;
    -webkit-line-clamp: 2;
    overflow: hidden;
    -webkit-box-orient: vertical;
    max-height: 48px;
    display: -webkit-box;
    line-height: 140%;
    min-height: 42px;
    font-family: var(--em-profile-font-title), Inter, sans-serif !important;
}

.mod_emundus_applications___title:hover,
.mod_emundus_applications___title:focus {
    text-decoration: none;
}

.mod_emundus_applications__container {
    display: flex;
    align-items: flex-end;
    flex-direction: column;
}

#applications_card_view .mod_emundus_applications__container {
    padding: 4px;
}

.mod_emundus_applications___content_app:hover .mod_emundus_applications__container {
    background: var(--em-profile-color);
    border-radius: var(--em-default-br);
    transition: transform .3s;
}

.mod_emundus_applications___content_app:hover .mod_emundus_applications__container .material-symbols-outlined{
    color: var(--neutral-0);
}

.mod_emundus_applications__container > .material-symbols-outlined{
    color: var(--em-profile-color);
}

.mod_emundus_applications__actions {
    flex-direction: column;
    box-shadow: 0 12px 17px rgba(5, 47, 55, 0.07), 0 5px 22px rgba(5, 47, 55, 0.06), 0 7px 8px rgba(5, 47, 55, 0.1);
    border-radius: calc(var(--em-applicant-br-cards) / 2);
    padding: var(--p-16);
    position: absolute;
    background: var(--neutral-0);
    z-index: 9999;
    width: max-content;
    right: 40px;
    top: 68px;
}

.mod_emundus_applications__actions a:hover,
.mod_emundus_applications__actions > div:hover {
    background: #EBECF0 !important;
    border-radius: var(--em-default-br) !important;
    color: var(--neutral-900) !important;
    text-decoration: none;
}

.mod_emundus_applications__actions a {
    padding: 6px 8px;
    height: 32px;
}

.mod_emundus_applications__actions a:visited {
    color: var(--neutral-900);
}
/* ... */

